tests/param/error/range_index_challenge.ggt
setting symmetric.
problem_type decisional.

input [ 1 ] @ 1.

challenge X^i @ k.